--- a/profile.html
+++ b/profile.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <title>Blog title</title>
   <link rel="stylesheet" href="theme.css">
   <link rel="stylesheet" href="style.css">
