User dashboard: Entry A15

--- a/search.html
+++ b/search.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <title>Blog title</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="theme.css">
   <link rel="stylesheet" href="res.css">
 
   <meta name="theme-color" media="(prefers-color-scheme: light)" content="#4285f4" />
