User dashboard: Entry A16

--- a/edit-profile.html
+++ b/edit-profile.html
@@ -297,7 +297,7 @@
       </ul>
     </section>
     <section class="content">
-      <!-- <name-form  method="PATCH" url="/user/edit/name" api-url="/api/v1/u/edit/name"
+      <name-form  method="PATCH" url="/user/edit/name" api-url="/api/v1/u/edit/name"
         first-name="John" last-name="Doe">
       </name-form>
       <bio-form method="PATCH" url="/user/edit/bio" api-url="/api/v1/u/edit/bio"
@@ -324,9 +324,9 @@
 
       <stat-container url="/user/stats" api="/api/v1/u/stats" api-stories="/api/v1/u/stats/stories" api-opinions="/api/v1/u/stats/opinions"
         api-followers="/api/v1/u/stats/followers" api-subscribers="/api/v1/u/stats/subscribers">
-      </stat-container> -->
+      </stat-container>
 
-      <!-- <div class="reading coming-soon">
+      <div class="reading coming-soon">
         <h3 class="title">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16" fill="currentColor">
             <path
@@ -379,7 +379,7 @@
           We appreciate your patience and understanding. Stay tuned for updates and exciting announcements.<br /> <br />
           Thank you for being a part of our community!
         </p>
-      </div> -->
+      </div>
 
       <div class="themes">
         <div class="top">
