--- a/test.html
+++ b/test.html
@@ -106,13 +106,10 @@
             </span>
           </span>
           <span class="action share">
-            <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path fill-rule="evenodd" clip-rule="evenodd"
-                d="M7.6622 8.29208C7.6622 8.29208 -0.322234 6.64035 2.4524 5.03865C4.79383 3.68712 12.8631 1.36342 13.9905 1.96382C14.5909 3.09115 12.2672 11.1604 10.9156 13.5019C9.31393 16.2765 7.6622 8.29208 7.6622 8.29208Z"
-                stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-              <path d="M7.66211 8.29207L13.9904 1.96381" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
-                stroke-linejoin="round" />
-            </svg>
+            <span class="icon">
+              <span class="sp">•</span>
+              <span class="sp">•</span>
+            </span>
             <div class="overlay">
               <span class="options">
                 <span class="option link">
@@ -212,13 +209,10 @@
             </span>
           </span> -->
           <span class="action share">
-            <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path fill-rule="evenodd" clip-rule="evenodd"
-                d="M7.6622 8.29208C7.6622 8.29208 -0.322234 6.64035 2.4524 5.03865C4.79383 3.68712 12.8631 1.36342 13.9905 1.96382C14.5909 3.09115 12.2672 11.1604 10.9156 13.5019C9.31393 16.2765 7.6622 8.29208 7.6622 8.29208Z"
-                stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-              <path d="M7.66211 8.29207L13.9904 1.96381" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
-                stroke-linejoin="round" />
-            </svg>
+            <span class="icon">
+              <span class="sp">•</span>
+              <span class="sp">•</span>
+            </span>
           </span>
         </div>
       </div>
@@ -284,13 +278,10 @@
             </span>
           </span>
           <span class="action share">
-            <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path fill-rule="evenodd" clip-rule="evenodd"
-                d="M7.6622 8.29208C7.6622 8.29208 -0.322234 6.64035 2.4524 5.03865C4.79383 3.68712 12.8631 1.36342 13.9905 1.96382C14.5909 3.09115 12.2672 11.1604 10.9156 13.5019C9.31393 16.2765 7.6622 8.29208 7.6622 8.29208Z"
-                stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-              <path d="M7.66211 8.29207L13.9904 1.96381" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
-                stroke-linejoin="round" />
-            </svg>
+            <span class="icon">
+              <span class="sp">•</span>
+              <span class="sp">•</span>
+            </span>
           </span>
         </div>
       </div>
@@ -362,13 +353,10 @@
             </span>
           </span> -->
           <span class="action share">
-            <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path fill-rule="evenodd" clip-rule="evenodd"
-                d="M7.6622 8.29208C7.6622 8.29208 -0.322234 6.64035 2.4524 5.03865C4.79383 3.68712 12.8631 1.36342 13.9905 1.96382C14.5909 3.09115 12.2672 11.1604 10.9156 13.5019C9.31393 16.2765 7.6622 8.29208 7.6622 8.29208Z"
-                stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-              <path d="M7.66211 8.29207L13.9904 1.96381" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
-                stroke-linejoin="round" />
-            </svg>
+            <span class="icon">
+              <span class="sp">•</span>
+              <span class="sp">•</span>
+            </span>
           </span>
         </div>
       </div>
