--- a/test.html
+++ b/test.html
@@ -70,7 +70,7 @@
         </div>
         <div class="poll">
           <div class="poll-options">
-            <div class="poll-option">
+            <div data-name="one" class="poll-option high">
               <input type="radio" name="poll" id="poll-1">
               <label for="poll-1">
                 <span class="text">Option 1</span>
@@ -80,7 +80,7 @@
                 </svg>
               </label>
             </div>
-            <div class="poll-option">
+            <div data-name="two" class="poll-option">
               <input type="radio" name="poll" id="poll-2">
               <label for="poll-2">
                 <span class="text">Option 2</span>
@@ -90,7 +90,7 @@
                 </svg>
               </label>
             </div>
-            <div class="poll-option">
+            <div data-name="three" class="poll-option">
               <input type="radio" name="poll" id="poll-3">
               <label for="poll-3">
                 <span class="text">Option 3</span>
@@ -100,7 +100,7 @@
                 </svg>
               </label>
             </div>
-            <div class="poll-option selected">
+            <div data-name="four" class="poll-option selected">
               <input type="radio" name="poll" id="poll-4">
               <label for="poll-4">
                 <span class="text">Option 4</span>
@@ -111,6 +111,14 @@
               </label>
             </div>
           </div>
+          <span class="info">
+            <span class="total">
+              <span class="count">100</span>
+              <span class="text">votes</span>
+            </span>
+            <span class="sp">•</span>
+            <span class="count">48:39:32</span>
+          </span>
         </div>
       </div>
 
