Story page: Entry A12

--- a/index.html
+++ b/index.html
@@ -135,8 +135,7 @@
     opinions="673" liked="false" likes="972" views="6473"
     author-username="U0A43PBAH6A" author-img="img/img.jpg" author-verified="true" author-name="Fredrick Ochieng" author-followers="7623"
     author-following="263" author-follow="false" author-bio="I am a student at the East African University, I am a software developer and a tech enthusiast.
-      I love to write about technology and software development.
-      I am also passionate about open-source software and I am a contributor to various open-source projects."
+      I love to write about technology and software development."
     >
   </app-story>
 
