--- a/home.html
+++ b/home.html
@@ -18,60 +18,57 @@
     content="https://getopas.pythonanywhere.com/@femar/debian-vs-ubuntu-linux-which-one-should-you-choose-1-23">
 
   <script type="module">
-    import AppHome from "./js/apps/home.app.js";
+        import AppHome from "./js/apps/home.app.js";
     import AppPost from "./js/apps/post.app.js";
     import AppSearch from "./js/apps/search.app.js";
     import AppProfile from "./js/apps/profile.app.js";
     import AppStory from "./js/apps/story.app.js";
     import AppTopic from "./js/apps/topic.app.js";
-    import AppUser from "./js/apps/user.app.js";
 
     import HeaderContainer from "./js/containers/header.container.js"
     import StoryBody from "./js/story.body.js";
 
+    // Import post wrappers
+    import QuePost from "./js/post/que.post.js";
+    import QuickPost from "./js/post/quick.post.js";
+    import StoryPost from "./js/post/story.post.js";
+    import PollPost from "./js/post/poll.post.js";
+
+    // Import wrappers
+    import PostWrapper from "./js/wrappers/post.wrapper.js";
+    import PollWrapper from "./js/wrappers/poll.wrapper.js"
+    import AuthorWrapper from "./js/wrappers/author.wrapper.js";
+    import HeaderWrapper from "./js/wrappers/header.wrapper.js";
+
+    // Import elements
+    import CustomSpan from "./js/elements/span.element.js"
+
     import OpinionWrapper from "./js/opinion.component.js";
     import StoryWrapper from "./js/story.component.js";
-    import PostWrapper from "./js/wrappers/post.wrapper.js";
     import PersonWrapper from "./js/author.component.js";
     import UserWrapper from "./js/person.component.js"
 
+    // Import loaders
     import StoryLoader from "./js/loaders/story.loader.js";
     import PostLoader from "./js/loaders/post.loader.js";
     import PeopleLoader from "./js/loaders/people.loader.js";
     import TopicsLoader from "./js/loaders/topics.loader.js";
+    import InfoLoader from "./js/loaders/info.loader.js";
 
     import StoryFeed from "./js/feeds/stories.feed.js";
     import OpinionFeed from "./js/feeds/opinions.feed.js";
     import PeopleFeed from "./js/feeds/people.feed.js"
 
+    // Import containers
     import PeopleContainer from "./js/containers/people.container.js";
     import StoriesContainer from "./js/containers/stories-container.js"
     import TrendingContainer from "./js/containers/trending.container.js"
     import TopicsContainer from "./js/containers/topics.container.js";
     import FormContainer from "./js/containers/form.container.js";
     import AddContainer from "./js/containers/add.container.js";
+    import InfoContainer from "./js/containers/info.container.js";
 
     import DiscoverPeople from "./js/containers/people.discover.js"
-
-    import AllStat from "./js/stats/all.stat.js";
-    import StoriesStat from "./js/stats/stories.stat.js";
-    import OpinionsStat from "./js/stats/opinions.stat.js";
-    import UsersStat from "./js/stats/users.stat.js";
-    import StatStory from "./js/stats/stat.story.js";
-    import StatOpinion from "./js/stats/stat.opinion.js";
-    import ActivityItem from "./js/stats/activity.item.js"
-
-    import FormName  from "./js/forms/name.form.js";
-    import FormBio from "./js/forms/bio.form.js";
-    import FormProfile from "./js/forms/profile.form.js";
-    import FormSocial from "./js/forms/social.form.js";
-    import FormEmail from "./js/forms/email.form.js";
-    import FormPassword from "./js/forms/password.form.js";
-
-    import ActivityContainer from "./js/containers/activity.container.js";
-    import StatContainer from "./js/containers/stat.container.js";
-    import ActivityFeed from "./js/feeds/activity.feed.js";
-    import StatFeed from "./js/feeds/stat.feed.js";
 
 
     customElements.define('app-home', AppHome);
@@ -80,20 +77,34 @@
     customElements.define('app-profile', AppProfile);
     customElements.define('app-story', AppStory);
     customElements.define('app-topic', AppTopic);
-    customElements.define('app-user', AppUser);
 
     customElements.define('header-container', HeaderContainer);
     customElements.define('story-body', StoryBody);
 
+    // Register post wrappers
+    customElements.define('que-post', QuePost);
+    customElements.define('quick-post', QuickPost);
+    customElements.define('story-post', StoryPost);
+    customElements.define('poll-post', PollPost);
+
+    // Register wrappers
+    customElements.define('post-wrapper', PostWrapper);
+    customElements.define('poll-wrapper', PollWrapper);
+    customElements.define('author-wrapper', AuthorWrapper);
+    customElements.define('header-wrapper', HeaderWrapper);
+
+    // Register elements not as custom elements but extend HTMLElement
+    customElements.define('custom-span', CustomSpan, { extends: 'span' });
+
     customElements.define('opinion-wrapper', OpinionWrapper);
     customElements.define('story-wrapper', StoryWrapper);
-    customElements.define('post-wrapper', PostWrapper);
     customElements.define('person-wrapper', PersonWrapper);
     customElements.define('user-wrapper', UserWrapper);
 
-
+    // Register loaders
     customElements.define('story-loader', StoryLoader);
     customElements.define('post-loader', PostLoader);
+    customElements.define('info-loader', InfoLoader);
 
     customElements.define('people-loader', PeopleLoader);
     customElements.define('topics-loader', TopicsLoader);
@@ -101,34 +112,16 @@
     customElements.define('opinions-feed', OpinionFeed);
     customElements.define('people-feed', PeopleFeed)
 
+    // Register containers
     customElements.define('people-container', PeopleContainer);
     customElements.define('stories-container', StoriesContainer);
     customElements.define('trending-container', TrendingContainer);
     customElements.define('topics-container', TopicsContainer);
     customElements.define('form-container', FormContainer);
     customElements.define('add-container', AddContainer);
+    customElements.define('info-container', InfoContainer);
 
     customElements.define('discover-people', DiscoverPeople);
-
-    customElements.define('all-stat', AllStat);
-    customElements.define('stories-stat', StoriesStat);
-    customElements.define('opinions-stat', OpinionsStat);
-    customElements.define('users-stat', UsersStat);
-    customElements.define('stat-story', StatStory);
-    customElements.define('stat-opinion', StatOpinion);
-    customElements.define('activity-item', ActivityItem);
-
-    customElements.define('name-form', FormName);
-    customElements.define('bio-form', FormBio);
-    customElements.define('profile-form', FormProfile);
-    customElements.define('social-form', FormSocial);
-    customElements.define('email-form', FormEmail);
-    customElements.define('password-form', FormPassword);
-
-    customElements.define('activity-container', ActivityContainer);
-    customElements.define('stat-container', StatContainer);
-    customElements.define('activity-feed', ActivityFeed);
-    customElements.define('stat-feed', StatFeed);
   </script>
 </head>
 
